Fixed the form to look smaller on computer
On a computer screen the inputs and button were stretched out so i made them smaller to look a little nicer

--- a/employee-app/public/css/login1.css
+++ b/employee-app/public/css/login1.css
@@ -28,6 +28,9 @@
     display: flex;
     flex-direction: column;
     margin: 0 0 2em 0;
+    
+    align-content: center;
+    align-items: center;
   }
   
   .login-form-label {
@@ -38,6 +41,10 @@
     font-size: 1.25em;
     font-weight: bold;
     color: var(--near-black);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
   .login-form-input {
@@ -48,6 +55,8 @@
     border-radius: var(--small-px);
     border-style: solid;
     border-color: hsl(219, 32%, 38%);
+
+    max-width: 450px;
   }
   
   .login-form-input:focus {
@@ -66,6 +75,10 @@
   
     border-radius: var(--small-px);
     border-style: none;
+
+    max-width: 450px;
+    align-items: center;
+    justify-content: center;
   }
   
   .login-form-submit:hover {
